# easyDAG

./: .codacy.yml  .gitignore  .travis.yml  AUTHORS.md  CMakeLists.txt  DAGConfig.cmake.in  LICENSE.md  README.md  appveyor.yml  build.ps1  build.sh
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: ISSUE_TEMPLATE.md
.github/workflows/: build.yml
benchmark/: CMakeLists.txt
benchmark/binary_tree/: easy.hpp  main.cpp  omp.cpp
benchmark/binary_tree/include/: binary_tree.h
benchmark/dot_product/: easy.hpp  main.cpp  omp.cpp
benchmark/dot_product/include/: dot_product.h
benchmark/linear_chain/: easy.hpp  main.cpp  omp.cpp
benchmark/linear_chain/include/: linear_chain.h
benchmark/timeit/hpp/: timeit.hpp
benchmark/timeit/include/: timeit.h
docs/: _config.yml  authors.md  cpp_install.md  index.md  install.md
example/: algebra.cpp  cached.cpp  condition.cpp  graph.cpp  graphviz.cpp  mcc.cpp  time_monitor.cpp
hpp/: alias.hpp  cache.hpp  easyDAG.hpp  helper.hpp  input_variable.hpp  math.hpp  ntask.hpp  step.hpp  task.hpp  utils.hpp
include/: alias.h  cache.h  helper.h  input_variable.h  ntask.h  step.h  task.h  utils.h
test/: CMakeLists.txt  catch.hpp  run_test.ps1  run_test.sh  test_math.cpp  test_object.cpp  test_utils.cpp
